# harp

./: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  LICENSING.md  README.md  SECURITY.md  pmh-eth.state
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  eth-asan.yml  eth.yml  hw.yml  perf-gate.yml  reaper-e2e.yml  soak.yml  win.yml
build-fuzz/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fuzz-audio  fuzz-cbor  fuzz-envelope  fuzz-link  fuzz-object  gen-corpus  harp-deviced  harp-probe  harp-tests
cmake/: mingw-w64.toolchain.cmake
core/include/harp/: anonymize.h  audio.h  cbor.h  envelope.h  frame.h  link.h  object.h  plat.h  sha256.h  store.h
core/src/: anonymize.c  audio.c  cbor.c  envelope.c  frame.c  link.c  object.c  plat_posix.c  plat_win.c  sha256.c  store.c
device/: arp_select.h  audio_loop.c  compat_pthread.h  compat_time_win.h  conn_ratelimit.h  device.h  engine.c  evq_mod.h  fence_wait.h  ffs.c  ffs_link.c  ffs_link.h  harp-deviced.c  log_ring.c  log_ring.h  op_ratelimit.h  panel.c  panel_stub_win.c  session.c  state.c  voice_alloc.h
docs/: DESIGN.md  architecture.md  arp-plan.md  debt.md  diag-bundle-design.md  ethernet-transport-plan.md  multitimbral-plan.md  usb-wedge-rootcause.md  vst3-shell-plan.md
fuzz/: evt_stubs.c  fuzz_audio.c  fuzz_cbor.c  fuzz_envelope.c  fuzz_evt.c  fuzz_ffs.c  fuzz_link.c  fuzz_object.c  fuzz_state.c  gen_corpus.c  standalone_driver.c  state_stubs.c
fuzz/corpus/: audio-hdr  env-error  env-hello-req  env-refs-rsp  link-stream  obj-blob  obj-snapshot  obj-tree
host/: client.c  client.h  freerun.c  freerun.h  harp-probe.c  mdns.c  mdns.h  rt_sched.c  rt_sched.h  rtp.c  rtp.h  rtp_udp.c  rtp_udp.h  sock_io.c  sock_io.h  sync_compat.h  usb_io.c  usb_io.h  usb_select.h
scripts/: 99-harp.rules  abuse-test.sh  admission-eth-test.sh  alias-group-e2e.sh  alias-part-audio-test.sh  alias-play-test.sh  archive-before-push-test.sh  bloat-recall-eth-test.sh  cas-conflict-eth-test.sh  cddl-validate.py  cert-harness.sh  cert-tests.tsv  clap-test.sh  compose.py  compose_music.py  conn-flood-test.sh  core-test.sh  corrupt-cbor-eth-test.sh  cppcheck-suppressions.txt  credit-eth-test.sh  cross-format-recall-test.sh  device-coverage-drive.sh  diag-bundle-eth-test.sh  diag-bundle-host-eth-test.sh  diag-counters-eth-test.sh  engine-gate-eth-test.sh  engine-golden-test.sh  engine-mismatch-eth-test.sh  epoch-test.sh  eth-extern-lib.sh  eth-latency-probe.sh  eth-rtfloor-test.sh  eth-shell-mdns-test.sh  eth-suite.sh  eth-tests.sh  evt-storm-eth-test.sh  fence-l10-repro.sh  fence-load-rt.sh  flood-stress.sh  freerun-sinad-eth-test.sh  (+69 more)
shell/: diag_rings.h  eth_transport.h  fx_plugin.cpp  mpe_zone.h  note_voice_map.h  plugin.cpp  ring.h  runtime.cpp  runtime.h  runtime_audio.cpp  runtime_diag.cpp  runtime_events.cpp  runtime_log.h  runtime_recall.cpp  runtime_registry.cpp  runtime_registry.h  runtime_session.cpp  shell_config.h  shell_constants.h  transport.h  ump.h  usb_transport.h
shell/au/: harp_au.mm
shell/clap/: harp_clap.cpp
spec/: harp-spec-1.0.md  harp-spec-draft-0.3.md  harp-spec.md  harp.cddl
tests/: check.h  harp_device_tests.c  harp_engine_logic_tests.c  harp_ffs_link_tests.c  harp_freerun_mt_tests.c  harp_freerun_tests.c  harp_logring_tests.c  harp_param_map_hash_tests.c  harp_rtp_hf_tests.c  harp_rtp_tests.c  harp_tests.c  registry_tests.cpp  runtime_units_tests.cpp
tools/: engine-golden.c  eth-bitexact-test.c  eth-fence-test.c  eth-latefr-test.c  eth-rtp-test.c  render_check.h  rt-jitter-bench.c  rtp-demo.c  win_loopback_repro.c
tools/au-host/: au-info.plist.in  main.mm
tools/clap-host/: clap-info.plist.in  main.cpp
tools/tsan-host/: main.cpp
tools/vst3-host/: CMakeLists.txt  main.cpp  mpe_zone_tests.cpp  ring_tests.cpp  runtime-probe.cpp
web/: electra-panel.py  harp-panel.py  panel.html
